@@ -851,12 +851,32 @@ svg {
   max-width: 32rem;
 }
 
+.max34 {
+  max-width: 34rem;
+}
+
+.max35 {
+  max-width: 35rem;
+}
+
 .max36 {
   max-width: 36rem;
 }
 
+.max38 {
+  max-width: 38rem;
+}
+
 .max40 {
   max-width: 40rem;
+}
+
+.max42 {
+  max-width: 42rem;
+}
+
+.max44 {
+  max-width: 44rem;
 }
 
 .max45 {
@@ -877,6 +897,14 @@ svg {
 
 .max50 {
   max-width: 50rem;
+}
+
+.max51 {
+  max-width: 51rem;
+}
+
+.max55 {
+  max-width: 55rem;
 }
 
 .max56 {
@@ -915,12 +943,20 @@ svg {
   max-width: 77rem;
 }
 
+.max78 {
+  max-width: 78rem;
+}
+
 .max80 {
   max-width: 80rem;
 }
 
 .max90 {
   max-width: 90rem;
+}
+
+.wmax {
+  max-width: 100%;
 }
 
 .w100 {
@@ -937,6 +973,10 @@ svg {
 
 .wa {
   width: auto;
+}
+
+.hmax {
+  max-height: 100%;
 }
 
 .h100 {
@@ -1797,6 +1837,10 @@ svg {
 
   .xl-hide {
     display: none;
+  }
+
+  .xl-max {
+    max-width: none;
   }
 
   .xl-order0 {
