@@ -13,13 +13,20 @@
 .max24 { max-width: 24rem; }
 .max30 { max-width: 30rem; }
 .max32 { max-width: 32rem; }
+.max34 { max-width: 34rem; }
+.max35 { max-width: 35rem; }
 .max36 { max-width: 36rem; }
+.max38 { max-width: 38rem; }
 .max40 { max-width: 40rem; }
+.max42 { max-width: 42rem; }
+.max44 { max-width: 44rem; }
 .max45 { max-width: 45rem; }
 .max47 { max-width: 47rem; }
 .max48 { max-width: 48rem; }
 .max49 { max-width: 49rem; }
 .max50 { max-width: 50rem; }
+.max51 { max-width: 51rem; }
+.max55 { max-width: 55rem; }
 .max56 { max-width: 56rem; }
 .max60 { max-width: 60rem; }
 .max64 { max-width: 64rem; }
@@ -29,13 +36,18 @@
 .max74 { max-width: 74rem; }
 .max75 { max-width: 75rem; }
 .max77 { max-width: 77rem; }
+.max78 { max-width: 78rem; }
 .max80 { max-width: 80rem; }
 .max90 { max-width: 90rem; }
+
+.wmax { max-width: 100%; }
 
 .w100 { width: 100%; }
 .w50  { width: 50%; }
 .w0   { width: 0%; }
 .wa   { width: auto; }
+
+.hmax { max-height: 100%; }
 
 .h100 { height: 100%; }
 .h50  { height: 50%; }
@@ -318,6 +330,8 @@
 
   .xl-show { display: block; }
   .xl-hide { display: none; }
+
+  .xl-max { max-width: none; }
 
   .xl-order0 { order: 0; }
   .xl-order1 { order: 1; }
