@@ -1,7 +1,10 @@
 * 0.10.0 (2020-04-XX)
 
-  * (type) add .d[1-5]
+  * (type) add: .d[1-5]
   * (position) init: .position, .(left|right|top|bottom), .z([0-3]|9{1,4})
+  * (grid) add: .max(34|35|38|42|44|51|55|78)
+  * (grid) add: .(w|h)max { max-(width|height): 100% }
+  * (grid) add: .xl-max
 
 * 0.9.0 (2020-02-20)
 
